--- a/src/main/resources/it/unipi/brewathome/aggiungi_fermentabile.fxml
+++ b/src/main/resources/it/unipi/brewathome/aggiungi_fermentabile.fxml
@@ -79,21 +79,15 @@
             </StackPane>
             <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
                <children>
-                  <TextField fx:id="fieldCategoria" prefHeight="56.0" prefWidth="252.0">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                     <padding>
-                        <Insets left="16.0" top="16.0" />
-                     </padding>
+                  <ChoiceBox fx:id="fieldCategoria" prefHeight="56.0" prefWidth="252.0">
                      <styleClass>
                         <String fx:value="input-text--filled" />
                         <String fx:value="body-large" />
                      </styleClass>
-                     <StackPane.margin>
-                        <Insets />
-                     </StackPane.margin>
-                  </TextField>
+                     <padding>
+                        <Insets top="16.0" />
+                     </padding>
+                  </ChoiceBox>
                   <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="body-small" text="Categoria" translateY="8.0">
                      <font>
                         <Font size="12.0" />
@@ -189,7 +183,7 @@
          <children>
             <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
                <children>
-                  <TextField fx:id="fieldColore" prefHeight="56.0" prefWidth="252.0">
+                  <TextField fx:id="fieldColore" prefHeight="56.0" prefWidth="252.0" text="5">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -212,7 +206,7 @@
                         <Insets left="17.0" />
                      </StackPane.margin>
                   </Label>
-                  <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="label-small" text="IBU" translateX="140.0" translateY="28.0">
+                  <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="label-small" text="EBC" translateX="140.0" translateY="28.0">
                      <font>
                         <Font size="12.0" />
                      </font>
@@ -221,7 +215,7 @@
             </StackPane>
             <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
                <children>
-                  <TextField fx:id="fieldPotenziale" prefHeight="56.0" prefWidth="252.0">
+                  <TextField fx:id="fieldPotenziale" prefHeight="56.0" prefWidth="252.0" text="1.035">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -244,11 +238,16 @@
                         <Insets left="17.0" />
                      </StackPane.margin>
                   </Label>
+                  <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="label-small" text="PPG" translateX="135.0" translateY="28.0">
+                     <font>
+                        <Font size="12.0" />
+                     </font>
+                  </Label>
                </children>
             </StackPane>
             <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
                <children>
-                  <TextField fx:id="fieldRendimento" prefHeight="56.0" prefWidth="252.0">
+                  <TextField fx:id="fieldRendimento" prefHeight="56.0" prefWidth="252.0" text="75">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -271,13 +270,18 @@
                         <Insets left="17.0" />
                      </StackPane.margin>
                   </Label>
+                  <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="label-small" text="\%" translateX="140.0" translateY="28.0">
+                     <font>
+                        <Font size="12.0" />
+                     </font>
+                  </Label>
                </children>
             </StackPane>
          </children>
       </HBox>
       <AnchorPane prefHeight="41.0" prefWidth="519.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#elimina" prefHeight="40.0" text="Annulla" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <Button mnemonicParsing="false" onAction="#elimina" prefHeight="40.0" text="Elimina" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                <styleClass>
                   <String fx:value="label-large" />
                   <String fx:value="icon_btn--alert" />
@@ -291,6 +295,7 @@
             </Button>
          </children>
       </AnchorPane>
+      <Text fx:id="errorMessage" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="body-small" />
    </children>
    <padding>
       <Insets bottom="24.0" left="16.0" right="16.0" top="24.0" />
