--- a/src/main/resources/it/unipi/brewathome/leftBar.fxml
+++ b/src/main/resources/it/unipi/brewathome/leftBar.fxml
@@ -33,29 +33,7 @@
             <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label-medium" text="Ricette" />
          </children>
       </VBox>
-      <VBox alignment="CENTER" prefWidth="80.0" spacing="4.0">
-         <children>
-            <Button alignment="CENTER" contentDisplay="TOP" graphicTextGap="0.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="63.0" styleClass="btn_nav" VBox.vgrow="NEVER">
-               <graphic>
-                  <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../img/account_circle.png" />
-                     </image>
-                     <viewport>
-                        <Rectangle2D />
-                     </viewport>
-                  </ImageView>
-               </graphic>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <padding>
-                  <Insets bottom="3.0" top="3.0" />
-               </padding>
-            </Button>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label-medium" text="Account" />
-         </children>
-      </VBox>
+      <VBox alignment="CENTER" prefWidth="80.0" spacing="4.0" />
    </children>
    <padding>
       <Insets top="24.0" />
