--- a/src/main/resources/it/unipi/brewathome/registrati.fxml
+++ b/src/main/resources/it/unipi/brewathome/registrati.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -61,15 +62,12 @@
                         <Font size="12.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="password" prefHeight="56.0" promptText="****">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
+                  <PasswordField fx:id="password" prefHeight="56.0">
                      <styleClass>
                         <String fx:value="input-text" />
                         <String fx:value="body-large" />
                      </styleClass>
-                  </TextField>
+                  </PasswordField>
                </children>
             </VBox>
             <VBox>
@@ -79,22 +77,20 @@
                         <Font size="12.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="confirmPassword" prefHeight="56.0" promptText="****">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
+                  <PasswordField fx:id="confirmPassword" prefHeight="56.0">
                      <styleClass>
                         <String fx:value="input-text" />
                         <String fx:value="body-large" />
                      </styleClass>
-                  </TextField>
+                  </PasswordField>
                </children>
             </VBox>
-            <Button fx:id="buttonAccedi" alignment="CENTER" mnemonicParsing="false" onAction="#register" prefHeight="40.0" prefWidth="1000.0" text="Registrati">
+            <Button fx:id="buttonRegistrati" alignment="CENTER" mnemonicParsing="false" onAction="#register" prefHeight="40.0" prefWidth="1000.0" text="Registrati">
                <styleClass>
                   <String fx:value="btn" />
                   <String fx:value="label-large" />
                </styleClass></Button>
+            <Text fx:id="errorMessage" strokeType="OUTSIDE" strokeWidth="0.0" />
             <Hyperlink onAction="#openAccedi" styleClass="body-small" text="Hai già un account? Accedi" />
          </children>
          <padding>
