--- a/src/main/resources/it/unipi/brewathome/cambia_stile.fxml
+++ b/src/main/resources/it/unipi/brewathome/cambia_stile.fxml
@@ -9,6 +9,7 @@
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="546.0" prefWidth="334.0" spacing="20.0" styleClass="container" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.controllers.StiliController">
    <children>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="headline-medium" text="Stili" />
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="body-medium" text="Doppio click per selezionare" />
       <ScrollPane fitToWidth="true" hbarPolicy="NEVER" prefHeight="476.0" prefWidth="318.0">
          <content>
             <ListView fx:id="listaStili" onMouseClicked="#seleziona" />
