--- a/src/main/resources/it/unipi/brewathome/modifica_ricetta.fxml
+++ b/src/main/resources/it/unipi/brewathome/modifica_ricetta.fxml
@@ -27,7 +27,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="900.0" prefWidth="1440.0" styleClass="grid" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.controllers.ModificaRicettaController">
+<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="900.0" prefWidth="1440.0" styleClass="grid" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" percentWidth="10.833333" />
       <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
@@ -56,11 +56,10 @@
       <ColumnConstraints fillWidth="false" halignment="LEFT" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" percentWidth="10.833333" />
   </columnConstraints>
   <rowConstraints>
-      <RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="72.0" valignment="CENTER" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" valignment="TOP" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" valignment="TOP" vgrow="ALWAYS" />
   </rowConstraints>
    <children>
-      <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" styleClass="scroll" GridPane.columnIndex="1" GridPane.columnSpan="19" GridPane.rowIndex="1">
+      <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" styleClass="scroll" GridPane.columnIndex="1" GridPane.columnSpan="19" GridPane.vgrow="ALWAYS">
          <content>
             <GridPane styleClass="grid-container">
               <columnConstraints>
@@ -71,9 +70,9 @@
               <rowConstraints>
                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="96.0" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" valignment="CENTER" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="24.0" valignment="CENTER" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="48.0" valignment="CENTER" vgrow="SOMETIMES" />
                 <RowConstraints fillHeight="false" minHeight="-Infinity" valignment="TOP" />
-                  <RowConstraints minHeight="10.0" valignment="TOP" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <AnchorPane GridPane.columnSpan="3">
@@ -112,8 +111,8 @@
                         </HBox>
                      </children>
                   </AnchorPane>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="headline-large" text="Ingredienti" GridPane.rowIndex="2" />
-                  <VBox alignment="TOP_CENTER" prefWidth="100.0" styleClass="card" GridPane.rowIndex="3" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="headline-large" text="Ingredienti" GridPane.rowIndex="3" />
+                  <VBox alignment="TOP_CENTER" prefWidth="100.0" styleClass="card" GridPane.rowIndex="4" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
                      <children>
                         <AnchorPane prefHeight="72.0">
                            <children>
@@ -157,7 +156,7 @@
                         </TableView>
                      </children>
                   </VBox>
-                  <VBox prefWidth="100.0" styleClass="card" GridPane.columnIndex="2" GridPane.rowIndex="3" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
+                  <VBox prefWidth="100.0" styleClass="card" GridPane.columnIndex="2" GridPane.rowIndex="4" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
                      <children>
                         <AnchorPane prefHeight="72.0">
                            <children>
@@ -226,7 +225,7 @@
             </GridPane>
          </content>
       </ScrollPane>
-      <VBox prefHeight="200.0" spacing="24.0" GridPane.columnIndex="21" GridPane.columnSpan="4" GridPane.rowIndex="1">
+      <VBox prefHeight="200.0" spacing="24.0" GridPane.columnIndex="21" GridPane.columnSpan="4">
          <children>
             <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
                <children>
