--- a/src/main/resources/it/unipi/brewathome/ricette.fxml
+++ b/src/main/resources/it/unipi/brewathome/ricette.fxml
@@ -41,22 +41,10 @@
       <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" percentWidth="10.833333" />
   </columnConstraints>
   <rowConstraints>
-      <RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="72.0" valignment="CENTER" vgrow="SOMETIMES" />
     <RowConstraints fillHeight="false" minHeight="10.0" valignment="TOP" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" prefWidth="1128.0" styleClass="scroll" GridPane.columnIndex="1" GridPane.columnSpan="23" GridPane.rowIndex="1" GridPane.valignment="TOP">
-         <content>
-            <FlowPane fx:id="flow" columnHalignment="CENTER" hgap="24.0" styleClass="flow-container" vgap="24.0">
-               <padding>
-                  <Insets bottom="24.0" top="24.0" />
-               </padding></FlowPane>
-         </content>
-         <padding>
-            <Insets top="72.0" />
-         </padding>
-      </ScrollPane>
-      <AnchorPane prefHeight="72.0" GridPane.columnIndex="1" GridPane.columnSpan="23" GridPane.rowIndex="1">
+      <AnchorPane prefHeight="72.0" GridPane.columnIndex="1" GridPane.columnSpan="23">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="display-medium" text="Ricette" AnchorPane.topAnchor="24.0" />
             <Button alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#creaRicetta" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="24.0">
@@ -70,5 +58,17 @@
             </Button>
          </children>
       </AnchorPane>
+      <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" prefWidth="1128.0" styleClass="scroll" GridPane.columnIndex="1" GridPane.columnSpan="23" GridPane.valignment="TOP">
+         <content>
+            <FlowPane fx:id="flow" columnHalignment="CENTER" hgap="24.0" styleClass="flow-container" vgap="24.0">
+               <padding>
+                  <Insets bottom="24.0" top="24.0" />
+               </padding>
+            </FlowPane>
+         </content>
+         <GridPane.margin>
+            <Insets top="72.0" />
+         </GridPane.margin>
+      </ScrollPane>
    </children>
 </GridPane>
