--- a/src/main/resources/it/unipi/brewathome/aggiungi_fermentabile.fxml
+++ b/src/main/resources/it/unipi/brewathome/aggiungi_fermentabile.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
@@ -13,7 +18,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="551.0" spacing="20.0" styleClass="container" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="551.0" spacing="20.0" styleClass="container" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="headline-medium" text="Modifica fermentabile" />
       <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
@@ -206,7 +211,7 @@
                         <Insets left="17.0" />
                      </StackPane.margin>
                   </Label>
-                  <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="label-small" text="EBC" translateX="140.0" translateY="28.0">
+                  <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="label-small" text="EBC" translateX="135.0" translateY="28.0">
                      <font>
                         <Font size="12.0" />
                      </font>
