--- a/src/main/resources/it/unipi/brewathome/aggiungi_luppolo.fxml
+++ b/src/main/resources/it/unipi/brewathome/aggiungi_luppolo.fxml
@@ -33,7 +33,7 @@
                   <Insets />
                </StackPane.margin>
             </TextField>
-            <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="body-small" text="Quantita" translateY="8.0">
+            <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="body-small" text="Quantità*" translateY="8.0">
                <font>
                   <Font size="12.0" />
                </font>
@@ -177,7 +177,7 @@
                         <Insets />
                      </StackPane.margin>
                   </TextField>
-                  <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="body-small" text="Alpha" translateY="8.0">
+                  <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="body-small" text="Alpha*" translateY="8.0">
                      <font>
                         <Font size="12.0" />
                      </font>
@@ -192,7 +192,6 @@
                   </Label>
                </children>
             </StackPane>
-            <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0" />
             <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
                <children>
                   <TextField fx:id="fieldTempo" prefHeight="56.0" prefWidth="252.0">
@@ -210,7 +209,7 @@
                         <Insets />
                      </StackPane.margin>
                   </TextField>
-                  <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="body-small" text="Tempo" translateY="8.0">
+                  <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="body-small" text="Tempo*" translateY="8.0">
                      <font>
                         <Font size="12.0" />
                      </font>
