--- a/src/main/resources/it/unipi/brewathome/modifica_ricetta.fxml
+++ b/src/main/resources/it/unipi/brewathome/modifica_ricetta.fxml
@@ -1,13 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Group?>
@@ -35,7 +27,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="900.0" prefWidth="1440.0" styleClass="grid" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="900.0" prefWidth="1440.0" styleClass="grid" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" percentWidth="10.833333" />
       <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
@@ -210,13 +202,13 @@
                   </VBox>
                   <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="112.0" GridPane.rowIndex="1">
                      <children>
-                        <TextArea fx:id="fieldDescrizione" prefHeight="200.0" prefWidth="509.0">
+                        <TextArea fx:id="fieldDescrizione" prefHeight="200.0" prefWidth="509.0" wrapText="true">
                            <styleClass>
                               <String fx:value="body-large" />
                               <String fx:value="input-text--filled" />
                            </styleClass>
                            <padding>
-                              <Insets left="16.0" top="24.0" />
+                              <Insets left="12.0" top="24.0" />
                            </padding>
                         </TextArea>
                         <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="body-small" text="Descrizione" translateY="8.0">
