disabling/enabling inputs on send data. Refactoring

--- a/src/main/resources/it/unipi/brewathome/aggiungi_luppolo.fxml
+++ b/src/main/resources/it/unipi/brewathome/aggiungi_luppolo.fxml
@@ -228,13 +228,13 @@
       </HBox>
       <AnchorPane prefHeight="41.0" prefWidth="519.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#elimina" prefHeight="40.0" text="Elimina" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <Button fx:id="buttonElimina" mnemonicParsing="false" onAction="#elimina" prefHeight="40.0" text="Elimina" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                <styleClass>
                   <String fx:value="label-large" />
                   <String fx:value="icon_btn--alert" />
                </styleClass>
             </Button>
-            <Button layoutX="475.0" mnemonicParsing="false" onAction="#salva" prefHeight="40.0" text="Salva" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <Button fx:id="buttonSalva" layoutX="475.0" mnemonicParsing="false" onAction="#salva" prefHeight="40.0" text="Salva" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <styleClass>
                   <String fx:value="label-large" />
                   <String fx:value="icon_btn--positive" />
