--- a/src/main/resources/it/unipi/brewathome/modifica_ricetta.fxml
+++ b/src/main/resources/it/unipi/brewathome/modifica_ricetta.fxml
@@ -80,7 +80,7 @@
                         <Text fx:id="textNomeRicetta" layoutY="36.94921875" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="display-medium" text="Nome ricetta" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="24.0" />
                         <HBox layoutX="722.0" layoutY="-6.0" spacing="12.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="24.0">
                            <children>
-                              <Button alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#eliminaRicetta" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--alert">
+                              <Button fx:id="buttonElimina" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#eliminaRicetta" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--alert">
                                  <graphic>
                                     <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -89,7 +89,7 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <Button alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#salvaRicetta" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--positive">
+                              <Button fx:id="buttonSalva" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#salvaRicetta" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--positive">
                                  <graphic>
                                     <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -98,7 +98,7 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <Button alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#esci" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--standard">
+                              <Button fx:id="buttonAnnulla" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#esci" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--standard">
                                  <graphic>
                                     <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -122,7 +122,7 @@
                                  </image>
                               </ImageView>
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-large" text="Fermentabili" AnchorPane.leftAnchor="72.0" AnchorPane.topAnchor="0.0" />
-                              <Button alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#aggiungiFermentabile" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--filled" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="0.0">
+                              <Button fx:id="buttonFermentabile" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#aggiungiFermentabile" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--filled" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="0.0">
                                  <graphic>
                                     <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -166,7 +166,7 @@
                                  </image>
                               </ImageView>
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-large" text="Luppoli" AnchorPane.leftAnchor="72.0" AnchorPane.topAnchor="0.0" />
-                              <Button alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#aggiungiLuppolo" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--filled" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="0.0">
+                              <Button fx:id="buttonLuppolo" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#aggiungiLuppolo" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--filled" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="0.0">
                                  <graphic>
                                     <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -379,7 +379,7 @@
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-small" text="Stile: " AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="8.0" />
                         <Text fx:id="textStile" layoutX="10.0" layoutY="10.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-small" text="text" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="8.0" />
-                        <Button alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#cambiaStile" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--standard" AnchorPane.rightAnchor="0.0">
+                        <Button fx:id="buttonStile" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#cambiaStile" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--standard" AnchorPane.rightAnchor="0.0">
                            <graphic>
                               <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
