--- a/src/main/resources/styles/fonts.css
+++ b/src/main/resources/styles/fonts.css
@@ -1,11 +1,11 @@
 @font-face {
-    src: url(/fonts/Montserrat-Bold.ttf);
+    src: url('../fonts/Montserrat-Bold.ttf');
 }
 @font-face {
-    src: url(/fonts/Roboto-Regular.ttf);
+    src: url('../fonts/Roboto-Regular.ttf');
 }
 @font-face {
-    src: url(/fonts/Roboto-Medium.ttf);
+    src: url('../fonts/Roboto-Medium.ttf');
 }
 
 .display-large {
