--- a/src/main/resources/it/unipi/brewathome/card_ricetta.fxml
+++ b/src/main/resources/it/unipi/brewathome/card_ricetta.fxml
@@ -23,7 +23,7 @@
             <Insets bottom="12.0" />
          </VBox.margin>
       </Text>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Descrizione">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Descrizione" wrappingWidth="328.0">
          <VBox.margin>
             <Insets top="16.0" />
          </VBox.margin>
